--- a/.github/workflows/doc-img-build.yml
+++ b/.github/workflows/doc-img-build.yml
@@ -21,4 +21,5 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: python-helloworld
-      run: docker build . --file Dockerfile --tag latest
+    - Tag: latest
+      run: docker build . --file Dockerfile #-t python-helloworld
