--- a/.github/workflows/doc-img-build.yml
+++ b/.github/workflows/doc-img-build.yml
@@ -17,4 +17,9 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: python-helloworld
+    - tag: latest
+      run: docker build . --file Dockerfile
 
