added tag to image actions script

--- a/.github/workflows/doc-img-build.yml
+++ b/.github/workflows/doc-img-build.yml
@@ -17,9 +17,10 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+
     steps:
     - uses: actions/checkout@v2
     - name: python-helloworld
     - tag: latest
-      run: docker build . --file Dockerfile
+      run: docker build . --file Dockerfile -t python-helloworld
 
