--- a/.github/workflows/doc-img-build.yml
+++ b/.github/workflows/doc-img-build.yml
@@ -1,10 +1,10 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Create a docker img
 
 # Controls when the workflow will run
-on:
-  name: Docker Image CI
+#on:
+#  name: Docker Image CI
 
 on:
   push:
