added tag to image actions script 3

--- a/.github/workflows/doc-img-build.yml
+++ b/.github/workflows/doc-img-build.yml
@@ -20,7 +20,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: python-helloworld
-    - tag: latest
+    #- name: python-helloworld
+    #- tag: latest
       run: docker build . --file Dockerfile -t python-helloworld
 
