--- a/.github/workflows/doc-img-build.yml
+++ b/.github/workflows/doc-img-build.yml
@@ -1,26 +1,30 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Create a docker img
+name: Practice
 
-# Controls when the workflow will run
-#on:
-#  name: Docker Image CI
-
+#Triggers the workflow on push/pull request on the main branch
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
 
+# Allow you to run this workflow manually for Actions tab
+  workflow_dispatch:
+
+# A workflow run is made up of one or more jobs that can run squenttally or in parallel
+
 jobs:
 
+  # This workflow contians a single job called "build"
   build:
 
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
-    #- name: python-helloworld
-    #- tag: latest
+    - name: python-helloworld
+
       run: docker build . --file Dockerfile -t python-helloworld
 
