--- a/.github/workflows/docker_push.yml
+++ b/.github/workflows/docker_push.yml
@@ -34,6 +34,6 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-      - name: Build Docker Image
-          run: docker build . --file Dockerfile -t python-helloworld
+#      - name: Build Docker Image
+#          run: docker build . --file Dockerfile -t python-helloworld
 
