--- a/.github/workflows/docker_push.yml
+++ b/.github/workflows/docker_push.yml
@@ -28,12 +28,12 @@ jobs:
       - name: Check Out Repo 
         uses: actions/checkout@v2
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+#      - name: Login to Docker Hub
+#        uses: docker/login-action@v1
+#        with:
+#          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+#          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-#      - name: Build Docker Image
-#          run: docker build . --file Dockerfile -t python-helloworld
+      - name: Build Docker Image
+          run: docker build . --file Dockerfile -t python-helloworld
 
