list Docker images

--- a/.github/workflows/docker_push.yml
+++ b/.github/workflows/docker_push.yml
@@ -37,4 +37,6 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-
+      # List images
+      - name: List images
+        run: docker images
