--- a/.github/workflows/docker_push.yml
+++ b/.github/workflows/docker_push.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Check Out Repo 
         uses: actions/checkout@v2
 
-      - name: Build Docker Image
-          run: docker build . --file Dockerfile -t python-helloworld
+      #- name: Build Docker Image
+      #    run: docker build . --file Dockerfile -t python-helloworld
 
       # List images
       - name: List images
