--- a/.github/workflows/docker_push.yml
+++ b/.github/workflows/docker_push.yml
@@ -32,12 +32,12 @@ jobs:
           run: docker build . --file Dockerfile -t python-helloworld
 
       # List images
-      - name: List images
-        run: docker images
+#      - name: List images
+#        run: docker images
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+#      - name: Login to Docker Hub
+#        uses: docker/login-action@v1
+#        with:
+#          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+#          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
