--- a/.github/workflows/dockerPushv2.yml
+++ b/.github/workflows/dockerPushv2.yml
@@ -1,26 +1,31 @@
-name: CI_to_Docker_hub 
+name: build and push
 
 on:
   push:
     branches: [main]
 
+# Allow you to run this workflow manually for Actions tab
+  workflow_dispatch:
+
+# A workflow run is made up of one or more jobs that can run squenttally or in parallel
+
+jobs:
+
+  # This workflow contians a single job called "build"
+  build:
+
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
   steps:
 
-      -
-
-        name: Login to DockerHub
-
-        uses: docker/login-action@v1 
-
+    - name: Login to DockerHub
+    - uses: docker/login-action@v1 
         with:
-
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
-
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-      -
-
-        name: Build and push
+    - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
@@ -30,8 +35,7 @@ on:
 
           tags: joepub/python-helloworld:latest
 
-      -
 
-        name: Image digest
+    - name: Image digest
 
         run: echo ${{ steps.docker_build.outputs.digest }}
