--- a/.github/workflows/dockerPushv2.yml
+++ b/.github/workflows/dockerPushv2.yml
@@ -25,17 +25,15 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-    - name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          context: ./
-          file: ./Dockerfile
-          push: true
+#    - name: Build and push
+#        id: docker_build
+#        uses: docker/build-push-action@v2
+#        with:
+#          context: ./
+#          file: ./Dockerfile
+#          push: true
+#          tags: joepub/python-helloworld:latest
 
-          tags: joepub/python-helloworld:latest
 
-
-    - name: Image digest
-
-        run: echo ${{ steps.docker_build.outputs.digest }}
+#    - name: Image digest
+#        run: echo ${{ steps.docker_build.outputs.digest }}
