--- a/.github/workflows/dockerPushv2.yml
+++ b/.github/workflows/dockerPushv2.yml
@@ -20,7 +20,7 @@ jobs:
   steps:
 
     - name: Login to DockerHub
-    - uses: docker/login-action@v1 
+      uses: docker/login-action@v1 
       with:
         username: ${{ secrets.DOCKER_HUB_USERNAME }}
         password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
