--- a/.github/workflows/dockerPushv2.yml
+++ b/.github/workflows/dockerPushv2.yml
@@ -25,22 +25,15 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-#      - name: Login to Docker Hub
-#        uses: docker/login-action@v1
-#        with:
-#          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-#          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+      - name: Build and push
+          id: docker_build
+          uses: docker/build-push-action@v2
+          with:
+            context: ./
+            file: ./Dockerfile
+            push: true
+            tags: joepub/python-helloworld:latest
 
 
-#    - name: Build and push
-#        id: docker_build
-#        uses: docker/build-push-action@v2
-#        with:
-#          context: ./
-#          file: ./Dockerfile
-#          push: true
-#          tags: joepub/python-helloworld:latest
-
-
-#    - name: Image digest
-#        run: echo ${{ steps.docker_build.outputs.digest }}
+      - name: Image digest
+          run: echo ${{ steps.docker_build.outputs.digest }}
